Fix typo in blog link

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </p>
 
             <p>
-                I occassionally <a href="http://blog.vikram.io">write about things that I'm interested in</a>.
+                I occassionally <a href="http://blog.vikrams.io">write about things that I'm interested in</a>.
             </p>
 
             <p>
