--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                 In my free time, I <a href="http://goodreads.com/vikrams">read a lot</a>, watch soccer, football, and basketball, <a href="http://twitter.com/vsreekanti">complain about politics</a>, 
                 learn new languages, try to <a href="travel">travel</a>, and hack on random things. Other things I'm interested in or enjoy doing (in no particular order): Constitutional law, 
                 <a href="http://www.untappd.com/user/vikrams">beer</a>, productivity apps (e.g., to-do lists; my latest attempt is the
-                <a href="http://bulletjournal.com/">Bullet Journal</a>), sarcasm, existential philosophy, playing guitar, <a href="http://spotify.com/user/viksree">lots of different kinds of music </a>, 
+                <a href="http://bulletjournal.com/">Bullet Journal</a>),
+                sarcasm, existential philosophy, playing guitar, <a href="http://open.spotify.com/user/viksree">lots of different kinds of music </a>, 
                 Star Wars, Star Trek, driving stick shift, trying new food, running, watching TV.
             </p>
 
