add week 2 slides

--- a/cs186/index.html
+++ b/cs186/index.html
@@ -16,6 +16,7 @@
         <h1> CS 186, Fall 2016 Discussion Notes </h1>
         <ul>
           <li> <a href = "slides/week1.pptx">Week 1: Course Introduction, Git, SQL</a> </li>
+          <li> <a href = "slides/week2.pptx">Week 2: Multi-Table SQL</a> </li>
         </ul>
       </div>
     </body>
