Add week 3 slides

--- a/cs186/index.html
+++ b/cs186/index.html
@@ -17,6 +17,7 @@
         <ul>
           <li> <a href = "slides/week1.pptx">Week 1: Course Introduction, Git, SQL</a> </li>
           <li> <a href = "slides/week2.pptx">Week 2: Multi-Table SQL</a> </li>
+          <li> <a href = "slides/week3.pptx">Week 2: Files, Disks, and Indices</a> </li>
         </ul>
       </div>
     </body>
