add CIDR publication

--- a/research.html
+++ b/research.html
@@ -45,7 +45,10 @@
             <h1>Publications</h1>
 
             <p class="indent"> 
-                Publications (hopefully) coming soon... :-)
+              <ul>
+                <i>Establishing Common Ground with Data Context.</i> J.M. Hellerstein, <b>V. Sreekanti</b>, J.E. Gonzalez, et
+                  al. <i>CIDR</i> 2017. To appear.
+              </ul>
             </p>
         </div>
 
