Minor website updates

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <span class="title"></span>
 
             <p>
-                I'm a first year Ph.D. student in the <a href="http://amplab.cs.berkeley.edu">AMP Lab</a> at <a href="http;//berkeley.edu">U.C. Berkeley</a> 
+                I'm a first year Ph.D. student in the <a href="http://rise.cs.berkeley.edu">RISE Lab</a> at <a href="http;//berkeley.edu">U.C. Berkeley</a> 
                 working with Professor <a href="http://db.cs.berkeley.edu/jmh/">Joe Hellerstein</a>.
                 In general, I'm interested in databases, data systems, and distributed systems. My current work focuses on data context services.
                 Check out what we're working on <a href="http://www.ground-context.org">here</a> and <a href="http://github.com/ground-context">here</a>.
@@ -62,7 +62,7 @@
 
             <p>
                 I graduated from U.C. Berkeley with a B.S. in <a href="http://eecs.berkeley.edu">EECS</a> in May 2015. I've TA'd for Berkeley's undergraduate 
-                database systems course twice. You can find my resources <a href="https://github.com/vsreekanti/cs186">here</a>.
+                database systems course three times. You can find my resources <a href="https://github.com/vsreekanti/cs186">here</a>.
             </p>
 
             <p>
