--- a/research.html
+++ b/research.html
@@ -46,8 +46,10 @@
 
             <p class="indent"> 
               <ul>
-                <i>Establishing Common Ground with Data Context.</i> J.M. Hellerstein, <b>V. Sreekanti</b>, J.E. Gonzalez, et
-                  al. <i>CIDR</i> 2017. To appear.
+                <a href="http://cidrdb.org/cidr2017/papers/p111-hellerstein-cidr17.pdf"> 
+                  <i>Establishing Common Ground with Data Context.</i> </a>
+                  J.M. Hellerstein, <b>V. Sreekanti</b>, J.E. Gonzalez, et
+                  al. <i>CIDR</i> 2017.
               </ul>
             </p>
         </div>
