--- a/research.html
+++ b/research.html
@@ -47,7 +47,7 @@
             <p class="indent"> 
               <ul>
                 <a href="http://cidrdb.org/cidr2017/papers/p111-hellerstein-cidr17.pdf"> 
-                  <i>Establishing Common Ground with Data Context.</i> </a>
+                  <i>Ground: A Data Context Service.</i> </a>
                   J.M. Hellerstein, <b>V. Sreekanti</b>, J.E. Gonzalez, et
                   al. <i>CIDR</i> 2017.
               </ul>
