--- a/index.html
+++ b/index.html
@@ -54,15 +54,17 @@
             <span class="title"></span>
 
             <p>
-                I'm a second year Ph.D. student in the <a href="http://rise.cs.berkeley.edu">RISE Lab</a> at <a href="http;//berkeley.edu">U.C. Berkeley</a> 
+                I'm a third year Ph.D. student in the <a href="http://rise.cs.berkeley.edu">RISE Lab</a> at <a href="http;//berkeley.edu">U.C. Berkeley</a> 
                 working with Professor <a href="http://db.cs.berkeley.edu/jmh/">Joe Hellerstein</a>.
-                In general, I'm interested in databases, data systems, and distributed systems. My current work focuses on data context management.
-                Check out what we're working on <a href="http://www.ground-context.org">here</a> and <a href="http://github.com/ground-context">here</a>.
+                In general, I'm interested in databases, data systems, and distributed systems. 
+                My current work focuses on cloud infrastructure and data context management.
+                Check out what we're working on <a href="https://www.github.com/fluent-project/fluent">here</a> and <a href="http://github.com/ground-context">here</a>.
             </p>
 
             <p>
-                I graduated from U.C. Berkeley with a B.S. in <a href="http://eecs.berkeley.edu">EECS</a> in May 2015. I've TA'd for Berkeley's undergraduate 
-                database systems course three times. You can find my resources <a href="https://github.com/vsreekanti/cs186">here</a>.
+                I graduated from U.C. Berkeley with a B.S. in <a href="http://eecs.berkeley.edu">EECS</a> in May 2015. 
+                <!---I've TA'd for Berkeley's undergraduate 
+                  database systems course three times. You can find my resources <a href="https://github.com/vsreekanti/cs186">here</a>. -->
             </p>
 
             <p>
@@ -71,11 +73,11 @@
 
             <p>
                 In my free time, I <a href="http://goodreads.com/vikrams">read a lot</a>, watch soccer, football, and basketball, <a href="http://twitter.com/vsreekanti">complain about politics</a>, 
-                learn new languages, try to <a href="travel">travel</a>, and hack on random things. Other things I'm interested in or enjoy doing (in no particular order): Constitutional law, 
-                <a href="http://www.untappd.com/user/vikrams">beer</a>, productivity apps (e.g., to-do lists; my latest attempt is the
-                <a href="http://bulletjournal.com/">Bullet Journal</a>),
-                sarcasm, existential philosophy, playing guitar, <a href="http://open.spotify.com/user/viksree">lots of different kinds of music </a>, 
-                Star Wars, Star Trek, driving stick shift, trying new food, running, watching TV.
+                learn new languages, try to <a href="travel">travel</a>, and hack on random things. 
+                Other things I'm interested in or enjoy doing (in no particular order): Constitutional law, 
+                <a href="http://www.untappd.com/user/vikrams">beer</a>, productivity apps,
+                sarcasm, existential philosophy, <a href="http://open.spotify.com/user/viksree">lots of different kinds of music </a>, 
+                Star Wars, Star Trek, driving stick shift.
             </p>
         </div>
 
