minor publication update

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                     Back</i>.
                     J.M. Hellerstein, J. Faleiro, J.E. Gonzalez, J.
                     Schleier-Smith, <b>V. Sreekanti</b>, A. Tumanov, C. Wu.
-                    <i>CIDR</i> 2019. <i>To appear.</i>
+                    <i>CIDR</i> 2019. <i>To appear.</i> 
+                    (Preprint: <a href="https://arxiv.org/abs/1812.03651">arXiv:1812.03651</a>.)
                 </li>
 
                 <li>
