Moves blog into local repo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="assets/css/style.css">
 
         <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
         
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
@@ -18,12 +18,12 @@
               <h1> Vikram Sreekanti </h1>
               <div class="info">
                   <p>
-                      <a href='mailto:vikrams@berkeley.edu'><i class='fa fa-envelope'></i></a>
-                      <a href='https://blog.vikrams.io'><i class='fa fa-pencil'></i></a>
-                      <a href='http://facebook.com/vikram.sreekanti'><i class='fa fa-facebook'></i></a>
-                      <a href='http://twitter.com/vsreekanti'><i class='fa fa-twitter'></i></a> 
-                      <a href='http://github.com/vsreekanti'><i class='fa fa-github'></i></a> 
-                      <a href='https://www.linkedin.com/in/vikramsreekanti'><i class='fa fa-linkedin'></i></a> 
+                      <a href='https://www.vikrams.io/blog'><i class='fas fa-pencil-alt'></i></a>
+                      <a href='mailto:vikrams@berkeley.edu'><i class='fas fa-envelope'></i></a>
+                      <a href='http://facebook.com/vikram.sreekanti'><i class='fab fa-facebook-f'></i></a>
+                      <a href='http://twitter.com/vsreekanti'><i class='fab fa-twitter'></i></a> 
+                      <a href='http://github.com/vsreekanti'><i class='fab fa-github'></i></a> 
+                      <a href='https://www.linkedin.com/in/vikramsreekanti'><i class='fab fa-linkedin'></i></a> 
                       <a href='cv.pdf'><i class='fa fa-file'></i></a> 
                   </p> 
               </div>
