--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="main">
           <p>
-              I'm a third year Ph.D. student in the <a href="http://rise.cs.berkeley.edu">RISE Lab</a> at <a href="http;//berkeley.edu">U.C. Berkeley</a> 
+              I'm a fourth year Ph.D. student in the <a href="http://rise.cs.berkeley.edu">RISE Lab</a> at <a href="http;//berkeley.edu">U.C. Berkeley</a> 
               working with Professor <a href="http://db.cs.berkeley.edu/jmh/">Joe Hellerstein</a>.
               In general, I'm interested in databases, data systems, and distributed systems. 
               My current work focuses on autoscaling cloud infrastructure and data context management.
@@ -50,7 +50,7 @@
           </p>
 
           <p>
-              I occassionally <a href="http://blog.vikrams.io">write about things</a>.
+              I occassionally <a href="http://vikrams.io/blog">write about things</a>.
           </p>
 
           <p>
@@ -66,6 +66,16 @@
             <h2>Publications</h2>
 
             <ul>
+                <li>
+                  <i><a href="https://arxiv.org/abs/2001.04592">
+                      Cloudburst: Stateful Functions-as-a-Service
+                    </a></i>. 
+                  <b>V. Sreekanti</b>, C. Wu, X. C. Lin, J.
+                  Schleier-Smith, J. M. Faleiro, J. E. Gonzalez, J. M.
+                  Hellerstein, A. Tumanov. 
+                  <i>arxiv:2001.04592</i>. 2020.
+                </li>
+
                 <li>
                     <i><a href="https://www2.eecs.berkeley.edu/Pubs/TechRpts/2019/EECS-2019-3.pdf"> 
                       Cloud Programming Simplified: A Berkeley View of
