--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="assets/css/style.css">
 
         <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Bebas+Neue" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
         
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -37,12 +38,10 @@
         <div class="main">
           <p>
               I'm a fourth year Ph.D. student in the <a href="http://rise.cs.berkeley.edu">RISE Lab</a> at <a href="http;//berkeley.edu">U.C. Berkeley</a> 
-              working with Professor <a href="http://db.cs.berkeley.edu/jmh/">Joe Hellerstein</a>.
-              In general, I'm interested in databases, data systems, and distributed systems. 
-              My current work focuses on autoscaling cloud infrastructure and data context management.
-              Check out what we're working on <a
-                href="https://www.github.com/fluent-project/fluent">here</a>,
-              <a href="https://github.com/ucbrise/flor">here</a>, and <a href="http://github.com/ground-context">here</a>.
+              working with <a href="http://db.cs.berkeley.edu/jmh/">Joe Hellerstein</a> and <a href="https://people.eecs.berkeley.edu/~jegonzal/">Joey Gonzalez</a>.
+              I'm interested in cloud infrastructure, data systems, and distributed systems.
+              My current work focuses on making serverless infrastructure faster and easier to use.
+              Check out what we're working on <a href="https://www.github.com/hydro-project">here</a>.
           </p>
 
           <p>
@@ -54,7 +53,7 @@
           </p>
 
           <p>
-              In my free time, I <a href="http://goodreads.com/vikrams">read a lot</a>, watch soccer, football, and basketball, <a href="http://twitter.com/vsreekanti">complain about politics</a>, 
+              In my free time, I <a href="http://goodreads.com/vikrams">read a lot</a>, watch football (⚽), football (🏈), and basketball, <a href="http://twitter.com/vsreekanti">complain about politics</a>, 
               learn new languages, try to travel, and hack on random things. 
               Other things I'm interested in or enjoy doing (in no particular order): Constitutional law, 
               <a href="http://www.untappd.com/user/vikrams">beer</a>, productivity apps,
@@ -66,6 +65,12 @@
             <h2>Publications</h2>
 
             <ul>
+                <li>
+                  <i><a href="papers/aft-eurosys20.pdf">A Fault Tolerance Shim for Serverless Computing.</a></i>
+                  <b>V. Sreekanti</b>, C. Wu, S. Chhatrapati, J. E. Gonzalez, J. M. Hellerstein, J. M. Faleiro.
+                  <i>EuroSys</i> 2020.
+                </li>
+
                 <li>
                   <i><a href="https://arxiv.org/abs/2001.04592">
                       Cloudburst: Stateful Functions-as-a-Service
