Adds DS 100 discussion slides

--- a/index.html
+++ b/index.html
@@ -66,9 +66,15 @@
 
             <ul>
                 <li>
-                  <i><a href="papers/aft-eurosys20.pdf">A Fault Tolerance Shim for Serverless Computing.</a></i>
+                  <i>Transactional Causal Consistency for Serverless Computing</i>.
+                  C. Wu, <b>V. Sreekanti</b>, J. M. Hellerstein. <i>SIGMOD</i> 2020. <i>To appear.</i>
+                </li>
+
+                <li>
+                  <i><a href="papers/aft-eurosys20.pdf">A Fault-Tolerance Shim for Serverless Computing</a></i>.
                   <b>V. Sreekanti</b>, C. Wu, S. Chhatrapati, J. E. Gonzalez, J. M. Hellerstein, J. M. Faleiro.
                   <i>EuroSys</i> 2020.
+                  (Preprint: <a href="https://arxiv.org/abs/2003.06007">arXiv:2003.06007</a>.)
                 </li>
 
                 <li>
