P <i>To appear.</i>eriodic updates

--- a/index.html
+++ b/index.html
@@ -66,8 +66,17 @@
 
             <ul>
                 <li>
-                  <i>Transactional Causal Consistency for Serverless Computing</i>.
-                  C. Wu, <b>V. Sreekanti</b>, J. M. Hellerstein. <i>SIGMOD</i> 2020. <i>To appear.</i>
+                  <i><a href="https://arxiv.org/pdf/2006.07357v1.pdf">
+                      Hindsight Logging for Model Training</a></i>.
+                  R. Garcia, E. Liu, <b>V. Sreekanti</b>, B. Yan, A. Dandamudi,
+                  J. E. Gonzalez, J. M. Hellerstein. K. Sen.
+                  <i>arXiv:2006.07357</i>. 2020.
+                </li>
+
+                <li>
+                  <i><a href="papers/hydrocache-sigmod20.pdf">
+                      Transactional Causal Consistency for Serverless Computing</a></i>.
+                  C. Wu, <b>V. Sreekanti</b>, J. M. Hellerstein. <i>SIGMOD</i> 2020.
                 </li>
 
                 <li>
@@ -84,7 +93,7 @@
                   <b>V. Sreekanti</b>, C. Wu, X. C. Lin, J.
                   Schleier-Smith, J. M. Faleiro, J. E. Gonzalez, J. M.
                   Hellerstein, A. Tumanov. 
-                  <i>arxiv:2001.04592</i>. 2020.
+                  <i>arXiv:2001.04592</i>. 2020.
                 </li>
 
                 <li>
