--- a/index.html
+++ b/index.html
@@ -66,6 +66,26 @@
 
             <ul>
                 <li>
+                  <i><a href="https://arxiv.org/pdf/2007.05832.pdf">
+                      Optimizing Prediction Serving on Low-Latency Serverless Dataflow
+                    </a></i>.
+                  <b>V. Sreekanti</b>, H. Subbaraj, C. Wu, J. E. Gonzalez, J.
+                  M. Hellerstein.
+                  <i>arXiv:2007.05832</i>. 2020.
+                </li>
+
+                <li>
+                  <i><a href="papers/cloudburst-vldb20.pdf">
+                      Cloudburst: Stateful Functions-as-a-Service
+                    </a></i>. 
+                  <b>V. Sreekanti</b>, C. Wu, X. C. Lin, J.
+                  Schleier-Smith, J. M. Faleiro, J. E. Gonzalez, J. M.
+                  Hellerstein, A. Tumanov. 
+                  <i>VLDB</i> 2020.
+                  (Preprint: <a href="https://arxiv.org/abs/2001.04592">arXiv:2001.04592</a>.)
+                </li>
+
+                <li>
                   <i><a href="https://arxiv.org/pdf/2006.07357v1.pdf">
                       Hindsight Logging for Model Training</a></i>.
                   R. Garcia, E. Liu, <b>V. Sreekanti</b>, B. Yan, A. Dandamudi,
@@ -84,16 +104,6 @@
                   <b>V. Sreekanti</b>, C. Wu, S. Chhatrapati, J. E. Gonzalez, J. M. Hellerstein, J. M. Faleiro.
                   <i>EuroSys</i> 2020.
                   (Preprint: <a href="https://arxiv.org/abs/2003.06007">arXiv:2003.06007</a>.)
-                </li>
-
-                <li>
-                  <i><a href="https://arxiv.org/abs/2001.04592">
-                      Cloudburst: Stateful Functions-as-a-Service
-                    </a></i>. 
-                  <b>V. Sreekanti</b>, C. Wu, X. C. Lin, J.
-                  Schleier-Smith, J. M. Faleiro, J. E. Gonzalez, J. M.
-                  Hellerstein, A. Tumanov. 
-                  <i>arXiv:2001.04592</i>. 2020.
                 </li>
 
                 <li>
