--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
         <div class="main">
           <p>
-              I'm a fourth year Ph.D. student in the <a href="http://rise.cs.berkeley.edu">RISE Lab</a> at <a href="http;//berkeley.edu">U.C. Berkeley</a> 
+              I recently finished my Ph.D. at the <a href="http://rise.cs.berkeley.edu">RISE Lab</a> at <a href="http;//berkeley.edu">U.C. Berkeley</a> 
               working with <a href="http://db.cs.berkeley.edu/jmh/">Joe Hellerstein</a> and <a href="https://people.eecs.berkeley.edu/~jegonzal/">Joey Gonzalez</a>.
               I'm interested in cloud infrastructure, data systems, and distributed systems.
-              My current work focuses on making serverless infrastructure faster and easier to use.
-              Check out what we're working on <a href="https://www.github.com/hydro-project">here</a>.
+              My dissertation work focused on making serverless infrastructure faster and easier to use.
+              You can check out what we built <a href="https://www.github.com/hydro-project">here</a>.
           </p>
 
           <p>
@@ -66,9 +66,16 @@
 
             <ul>
                 <li>
+                  <i><a href="papers/thesis.pdf">
+                      The Design of Stateful Serverless Infrastructure.
+                  </a></i>
+                  PhD Dissertation. 2020.
+                </li>
+
+                <li>
                   <i><a href="https://arxiv.org/pdf/2007.05832.pdf">
-                      Optimizing Prediction Serving on Low-Latency Serverless Dataflow
-                    </a></i>.
+                      Optimizing Prediction Serving on Low-Latency Serverless Dataflow.
+                    </a></i>
                   <b>V. Sreekanti</b>, H. Subbaraj, C. Wu, J. E. Gonzalez, J.
                   M. Hellerstein.
                   <i>arXiv:2007.05832</i>. 2020.
@@ -76,8 +83,8 @@
 
                 <li>
                   <i><a href="papers/cloudburst-vldb20.pdf">
-                      Cloudburst: Stateful Functions-as-a-Service
-                    </a></i>. 
+                      Cloudburst: Stateful Functions-as-a-Service.
+                    </a></i>
                   <b>V. Sreekanti</b>, C. Wu, X. C. Lin, J.
                   Schleier-Smith, J. M. Faleiro, J. E. Gonzalez, J. M.
                   Hellerstein, A. Tumanov. 
